<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ModelHub</string>
    <string name="Home">Home</string>
    <string name="join_us_be_the_memebr_for_free">Be the member for free. Explore more features. </string>
    <string name="or">or</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="resume">Resume</string>
    <string name="status">Status: Member</string>
    <string name="job_tyoe">I\'m looking for...</string>
    <string name="commercial_video">Commercial Video</string>
    <string name="acting">Acting</string>
    <string name="modeling">Modeling</string>
    <string name="photography">Photography</string>
    <string name="promotion_work">Promotion work</string>
    <string name="project_manager">Project Manager</string>
    <string name="type">Type</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="internship">Internship</string>
    <string name="part_time">Part-Time</string>
    <string name="permanent">Permanent</string>
    <string name="remote">Remote</string>
    <string name="fullstack_developer">FullStack Developer</string>
    <string name="invalidName">invalid Name</string>
    <string name="invalidEmail">invalid Email</string>
    <string name="invalid_phone_number">invalid phone number</string>
    <string name="invalidUrl">invalid URL</string>
    <string name="later">Later</string>
    <string name="ok">I got it</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="phone_number_will_not_be_revealed_in_public">(*Phone number will not be revealed in public)</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="nationality">Nationality</string>
    <string name="where_are_you_based">Where are you based?</string>
    <string name="next">Next</string>
    <string name="notification">Notification</string>
    <string name="send_me_notification">Send me notification</string>
    <string name="we_ll_send_you_notification_about_new_jobs_available_sometimes_advertisers_urgently_looking_for_talents">We\'ll send you notification about new jobs available. Sometimes advertisers urgently looking for talents.</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="what_languages_do_you_speak">What languages do you speak?</string>
    <string name="this_helps_us_to_understand_your_language_skills_we_ll_provide_solution_of_language_barrier_between_you_and_client_in_the_future">This helps us to understand your language skills. We\'ll provide solution of language barrier between you and client in the future.</string>
    <string name="experience">Experience</string>
    <string name="state_your_current_experience_of_modeling_work">State your current experience of modeling work</string>
    <string name="bio">Bio</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="fluent">Fluent</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="modelhub">ModelHub</string>
    <string name="gender">Gender:</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="other">Other</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="contact_info">Contact Info</string>
    <string name="modelhubservice_gmail_com">modelhubservice@gmail.com</string>
    <string name="about_modelhub">About ModelHub</string>
    <string name="term_of_use">Term of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="you_have_not_signed_in">You have not signed in :(</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="language">Language</string>
    <string name="shooting_date">Shooting date:</string>
    <string name="description">Description</string>
    <string name="job_compensation">Job Compensation</string>
    <string name="other_info">Other info</string>
    <string name="cover_travel_expenses">Cover travel expenses:</string>
    <string name="contact_name">Contact Name:</string>
    <string name="shooting_duration">Shooting duration:</string>
    <string name="filter">Filter</string>
    <string name="opportunities">Opportunities</string>
    <string name="we_re_looking_for">We\'re looking for..</string>
    <string name="apply">Apply</string>
</resources>
