<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stepper_three_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_stepperthree_notification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/notification"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_stepperthree_ifsent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/send_me_notification"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_stepperthree_notification_title" />

    <TextView
        android:id="@+id/textview_stepperthree_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxWidth="300dp"
        android:text="@string/we_ll_send_you_notification_about_new_jobs_available_sometimes_advertisers_urgently_looking_for_talents"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_stepperthree_ifsent" />

    <Switch
        android:id="@+id/btn_stepperthree_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="50dp"
        android:checked="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_stepperthree_back"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/black_stroke"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/textcolor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_stepperthree_complete"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/pink_stroke"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/active_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>