<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/filter_position_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="I'm looking for..."
        android:textColor="@color/colorFilterContentTitle"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/filter_checkbox_commercial_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/commercial_video"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_position_title" />

    <CheckBox
        android:id="@+id/filter_checkbox_acting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/modeling"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_commercial_video" />

    <CheckBox
        android:visibility="gone"
        android:id="@+id/filter_checkbox_promotion_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/acting"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_fullstack" />

    <CheckBox
        android:id="@+id/filter_checkbox_photography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/photography"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toEndOf="@+id/filter_checkbox_commercial_video"
        app:layout_constraintTop_toBottomOf="@+id/filter_position_title" />

    <CheckBox
        android:id="@+id/filter_checkbox_modeling"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/acting"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="@+id/filter_checkbox_photography"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_photography" />

    <CheckBox
        android:visibility="gone"
        android:id="@+id/filter_checkbox_project_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/project_manager"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toEndOf="@+id/filter_checkbox_commercial_video"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_modeling" />

    <TextView
        android:id="@+id/filter_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/type"
        android:textColor="@color/colorFilterContentTitle"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_promotion_work" />

    <CheckBox
        android:id="@+id/filter_checkbox_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/paid"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_type_title" />

    <CheckBox
        android:visibility="gone"
        android:id="@+id/filter_checkbox_contract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/unpaid"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_paid" />

    <CheckBox
        android:visibility="gone"
        android:id="@+id/filter_checkbox_intern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/internship"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_contract" />

    <CheckBox
        android:id="@+id/filter_checkbox_unpaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/unpaid"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toEndOf="@+id/filter_checkbox_paid"
        app:layout_constraintTop_toBottomOf="@+id/filter_type_title" />

    <CheckBox
        android:visibility="gone"
        android:id="@+id/filter_checkbox_permanent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/permanent"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toEndOf="@+id/filter_checkbox_paid"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_unpaid" />

    <CheckBox
        android:visibility="gone"
        android:id="@+id/filter_checkbox_remote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/remote"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toEndOf="@+id/filter_checkbox_paid"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_permanent" />

    <CheckBox
        android:visibility="gone"
        android:id="@+id/filter_checkbox_fullstack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/fullstack_developer"
        android:textColor="@color/colorPageIconFilterItem"
        android:textSize="16sp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_checkbox_acting" />

    <Button
        android:id="@+id/filter_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/black_stroke"
        android:text="@string/save"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>